# accounts/account.model.js
@@ -1,23 +1,49 @@
 const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
 
-const schema = new Schema({
+const refreshTokenSchema = new Schema({
+    token: String,
+    expires: Date,
+    created: { type: Date, default: Date.now },
+    createdByIp: String,
+    revoked: Date,
+    revokedByIp: String,
+    replacedByToken: String
+});
+
+refreshTokenSchema.virtual('isExpired').get(function () {
+    return Date.now() >= this.expires;
+});
+
+refreshTokenSchema.virtual('isActive').get(function () {
+    return !this.revoked && !this.isExpired;
+});
+
+const accountSchema = new Schema({
     email: { type: String, unique: true, required: true },
     passwordHash: { type: String, required: true },
     title: { type: String, required: true },
     firstName: { type: String, required: true },
     lastName: { type: String, required: true },
-    acceptTerms: { type: Boolean },
+    acceptTerms: Boolean,
     role: { type: String, required: true },
-    verificationToken: { type: String },
-    isVerified: { type: Boolean, default: false },
-    resetToken: { type: String },
-    resetTokenExpiry: { type: Date },
-    dateCreated: { type: Date, default: Date.now },
-    dateUpdated: { type: Date }
+    verificationToken: String,
+    verified: Date,
+    resetToken: { 
+        token: String,
+        expires: Date
+    },
+    passwordReset: Date,
+    created: { type: Date, default: Date.now },
+    updated: Date,
+    refreshTokens: [refreshTokenSchema]
 });
 
-schema.set('toJSON', {
+accountSchema.virtual('isVerified').get(function () {
+    return !!(this.verified || this.passwordReset);
+});
+
+accountSchema.set('toJSON', {
     virtuals: true,
     versionKey: false,
     transform: function (doc, ret) {
@@ -27,4 +53,4 @@ schema.set('toJSON', {
     }
 });
 
-module.exports = mongoose.model('Account', schema);
+module.exports = mongoose.model('Account', accountSchema);
