# accounts/accounts.controller.js
@@ -8,6 +8,8 @@ const accountService = require('./account.service');
 
 // routes
 router.post('/authenticate', authenticateSchema, authenticate);
+router.post('/refresh-token', refreshToken);
+router.post('/revoke-token', authorize(), revokeTokenSchema, revokeToken);
 router.post('/register', registerSchema, register);
 router.post('/verify-email', verifyEmailSchema, verifyEmail);
 router.post('/forgot-password', forgotPasswordSchema, forgotPassword);
@@ -30,9 +32,49 @@ function authenticateSchema(req, res, next) {
 }
 
 function authenticate(req, res, next) {
-    accountService.authenticate(req.body)
-        .then(account => account ? res.json(account) : res.status(400).json({ message: 'Email or password is incorrect' }))
-        .catch(err => next(err));
+    const { email, password } = req.body;
+    const ipAddress = req.ip;
+    accountService.authenticate({ email, password, ipAddress })
+        .then(({ refreshToken, ...account }) => {
+            setTokenCookie(res, refreshToken);
+            res.json(account);
+        })
+        .catch(next);
+}
+
+function refreshToken(req, res, next) {
+    const token = req.cookies.refreshToken;
+    const ipAddress = req.ip;
+    accountService.refreshToken({ token, ipAddress })
+        .then(({ refreshToken, ...account }) => {
+            setTokenCookie(res, refreshToken);
+            res.json(account);
+        })
+        .catch(next);
+}
+
+function revokeTokenSchema(req, res, next) {
+    const schema = Joi.object({
+        token: Joi.string().empty('')
+    });
+    validateRequest(req, next, schema);
+}
+
+function revokeToken(req, res, next) {
+    // accept token from request body or cookie
+    const token = req.body.token || req.cookies.refreshToken;
+    const ipAddress = req.ip;
+
+    if (!token) return res.status(400).json({ message: 'Token is required' });
+
+    // users can revoke their own tokens and admins can revoke any tokens
+    if (!req.user.ownsToken(token) && req.user.role !== Role.Admin) {
+        return res.status(401).json({ message: 'Unauthorized' });
+    }
+
+    accountService.revokeToken({ token, ipAddress })
+        .then(() => res.json({ message: 'Token revoked' }))
+        .catch(next);
 }
 
 function registerSchema(req, res, next) {
@@ -51,7 +93,7 @@ function registerSchema(req, res, next) {
 function register(req, res, next) {
     accountService.register(req.body, req.get('origin'))
         .then(() => res.json({ message: 'Registration successful, please check your email for verification instructions' }))
-        .catch(err => next(err));
+        .catch(next);
 }
 
 function verifyEmailSchema(req, res, next) {
@@ -64,7 +106,7 @@ function verifyEmailSchema(req, res, next) {
 function verifyEmail(req, res, next) {
     accountService.verifyEmail(req.body)
         .then(() => res.json({ message: 'Verification successful, you can now login' }))
-        .catch(err => next(err));
+        .catch(next);
 }
 
 function forgotPasswordSchema(req, res, next) {
@@ -77,7 +119,7 @@ function forgotPasswordSchema(req, res, next) {
 function forgotPassword(req, res, next) {
     accountService.forgotPassword(req.body, req.get('origin'))
         .then(() => res.json({ message: 'Please check your email for password reset instructions' }))
-        .catch(err => next(err));
+        .catch(next);
 }
 
 function validateResetTokenSchema(req, res, next) {
@@ -90,7 +132,7 @@ function validateResetTokenSchema(req, res, next) {
 function validateResetToken(req, res, next) {
     accountService.validateResetToken(req.body)
         .then(() => res.json({ message: 'Token is valid' }))
-        .catch(err => next(err));
+        .catch(next);
 }
 
 function resetPasswordSchema(req, res, next) {
@@ -105,13 +147,13 @@ function resetPasswordSchema(req, res, next) {
 function resetPassword(req, res, next) {
     accountService.resetPassword(req.body)
         .then(() => res.json({ message: 'Password reset successful, you can now login' }))
-        .catch(err => next(err));
+        .catch(next);
 }
 
 function getAll(req, res, next) {
     accountService.getAll()
         .then(accounts => res.json(accounts))
-        .catch(err => next(err));
+        .catch(next);
 }
 
 function getById(req, res, next) {
@@ -122,7 +164,7 @@ function getById(req, res, next) {
 
     accountService.getById(req.params.id)
         .then(account => account ? res.json(account) : res.sendStatus(404))
-        .catch(err => next(err));
+        .catch(next);
 }
 
 function createSchema(req, res, next) {
@@ -141,7 +183,7 @@ function createSchema(req, res, next) {
 function create(req, res, next) {
     accountService.create(req.body)
         .then(account => res.json(account))
-        .catch(err => next(err));
+        .catch(next);
 }
 
 function updateSchema(req, res, next) {
@@ -171,7 +213,7 @@ function update(req, res, next) {
 
     accountService.update(req.params.id, req.body)
         .then(account => res.json(account))
-        .catch(err => next(err));
+        .catch(next);
 }
 
 function _delete(req, res, next) {
@@ -182,5 +224,17 @@ function _delete(req, res, next) {
 
     accountService.delete(req.params.id)
         .then(() => res.json({ message: 'Account deleted successfully' }))
-        .catch(err => next(err));
+        .catch(next);
+}
+
+// helper functions
+
+function setTokenCookie(res, token)
+{
+    // create cookie with refresh token that expires in 7 days
+    const cookieOptions = {
+        httpOnly: true,
+        expires: new Date(Date.now() + 7*24*60*60*1000)
+    };
+    res.cookie('refreshToken', token, cookieOptions);
 }
